some change made

--- a/contact-us.html
+++ b/contact-us.html
@@ -67,6 +67,10 @@
                         <p>
                         	<input type="button" class="btns" value="Submit" />
                         </p>
+                        <div class="ingi">
+                            <span class="dot"></span>
+                            <span class="line"></span>
+                        </div>
                     </fieldset>
                 </form>
                 </div><!--wb_content_main-->
